Fix spacing

--- a/src/WeddingSite.Web/wwwroot/css/site.css
+++ b/src/WeddingSite.Web/wwwroot/css/site.css
@@ -112,6 +112,7 @@ p {
 #registry-row {
   color: white;
   background-color: #7e57c2;
+  margin-top: 2em;
 }
 
 #search-bar-row {
